cmake_minimum_required(VERSION 3.5)
project(leetcode)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    array/all.h
    array/ex.cpp
    array/maxPoints.cpp
    bst/dev/BinarySearchTree.cpp
    bst/dev/BinarySearchTree.h
    bst/dev/BinarySearchTree_bug.cpp
    bst/dev/BinarySearchTree_v2.cpp
    bst/dev/main.cpp
    bst/dev/pretty_print.cpp
    bst/dev/Singly_linked_list.cpp
    bst/dev/Singly_linked_list.h
    bst/dev2/BinarySearchTree.cpp
    bst/dev2/BinarySearchTree.h
    bst/dev2/main.cpp
    bst/dev2/pretty_print.cpp
    hashtable/ex.cpp
    hashtable/Hashtable.cpp
    hashtable/Hashtable.h
    hashtable/main.cpp
    hashtable/p12.cpp
    hashtable/p14.cpp
    hashtable/p17.cpp
    hashtable/p2.cpp
    hashtable/p5.cpp
    hashtable/p8.cpp
    hashtable/TableNode.cpp
    hashtable/TableNode.h
    linkedlist/Doubly_linked_list.cpp
    linkedlist/Doubly_linked_list.h
    linkedlist/linked_list_test.cpp
    linkedlist/main.cpp
    linkedlist/Singly_linked_list.cpp
    linkedlist/Singly_linked_list.h
    red_black_tree/main.cpp
    red_black_tree/pretty_print.cpp
    red_black_tree/RedBlackTree.cpp
    red_black_tree/RedBlackTree.h
    searching/ex.cpp
    sorting/all.h
    sorting/ex.cpp
    sorting/mergesort.cpp
    sorting/mergesort_v2.cpp
    sorting/quicksort.cpp
    stack/stack.cpp
    stack/stack.h
    string/ex.cpp
    3sum.cpp
    3sum_v1.cpp
    addTwoNumbers.cpp
    all.h
    atoi.cpp
    binarySearch.cpp
    BinarySearchTree.cpp
    BinarySearchTree.h
    canJump.cpp
    climbStairs.cpp
    combination.cpp
    connect.cpp
    countPrimes.cpp
    deleteDuplicates.cpp
    detectCycle.cpp
    dutchFlag.cpp
    ex.cpp
    example.cpp
    findDuplicates.cpp
    findFirstMissingPositive.cpp
    findKthLargest.cpp
    fourSum.cpp
    getIntersectionNode.cpp
    happyNumber.cpp
    hasCycle.cpp
    houseRobber.cpp
    insertionSortList.cpp
    isIsoteric.cpp
    isSymmerics.cpp
    isSymmetric.cpp
    isValidSudoku.cpp
    killProcess.cpp
    largestNumber.cpp
    largestNumber_v0.cpp
    leastBricks.cpp
    letterCombinations.cpp
    list.cpp
    longestPalindrSubstr.cpp
    longestPalindrSubstr_v0.cpp
    longestSubstring.cpp
    longestSubstring_v0.cpp
    maximalRectangle.cpp
    mergeTwoLists.cpp
    mergeTwoSortedArrays.cpp
    nextGreaterElements.cpp
    nextPermutation.cpp
    palindromeNumber.cpp
    partition.cpp
    permutation.cpp
    pretty_print.cpp
    removeNthFromEnd.cpp
    reverseBetween.cpp
    reverseInteger.cpp
    swapPairs.cpp
    twoArrayMedian.cpp
    twoSum.cpp
    validParentheses.cpp
    ZigZagConversion.cpp)

add_executable(leetcode ${SOURCE_FILES})